# default-opt-project

./: CMakeLists.txt  Makefile  README.md
bash/: run_wsn.sh
include/default/: BaseClass.hpp  DerivedClass1.hpp  DerivedClass2.hpp  PolyDerived.hpp  typedef.hpp
modules/: grad_by_time.py
src/: main.cpp
src/default/: BaseClass.cpp  DerivedClass1.cpp  DerivedClass2.cpp  PolyDerived.cpp
